scss/main.scss
// font-family: 'Lato', sans-serif;
// font-family: 'Roboto', sans-serif;

$primary-color: rgb(32, 58, 67);

html {
  scroll-behavior: smooth;
}

ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

a {
  text-decoration: none;
}

body {
  font-family: 'Roboto', sans-serif;
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'Lato', sans-serif;
}

p {
  line-height: 1.25;
}

.container {
  width: 80%;
  margin: auto;
}

.btn {
  padding: 8px 24px;
  border-radius: 50px;
  font-weight: 500;
  font-size: 14px;
  margin: 0 5px;
  font-weight: 600;
  letter-spacing: 1px;
}

.btn--primary {
  background: $primary-color;
  color: #fff;
}

.btn--secondary {
  background: #fff;
  color: $primary-color;
  border: solid 2px $primary-color;
}

.btn--secondary:hover {
  background: $primary-color;
  color: #fff
}


header {
  border-top: solid 6px $primary-color;
  padding: 10px 0;
  background: #fff;
  position: sticky;
  top: 0;
  z-index: 1;
  nav {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    align-items: center;
    .logo {
      flex-basis: 100%;
      margin: 0;
      font-size: 1.2rem;
      text-align: center;
      &__link {
        color: $primary-color
      }
    }
    ul {
      display: flex;
      .nav-link {
        display: block;
        padding: 10px 8px;
        color: $primary-color;
        &:hover {
          font-weight: 600;
        }
      }
    }
  }
}

.active-nav-link {
  position: relative;
  font-weight: 600;
  &::after {
    content: "";
    height: 3px;
    width: 100%;
    background: $primary-color;
    border-radius: 3px;
    position: absolute;
    bottom: 0;
    left: 0;
  }
}

.hero {
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  &__title {
    font-size: 2rem;
    margin-bottom: 5px;
  }
  &__intro {
    color: $primary-color;
    font-weight: 600;
    margin-bottom: 30px;
  }
}

.project {
  margin: 0;
  position: relative;
  height: 250px;
  &__thumbnail {
    width: 100%;
    height: 100%;
    object-fit: cover;
    display: block;
    filter: grayscale(100%);
  }
  &__content {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: 0;
    transform: scale(0.5);
    transition-property: opacity, transform;
    transition-duration: .4s;
    background: transparentize($primary-color, 0.05);
    &-wrapper {
      height: inherit;
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      color: white;
    }
  }
}

.project:hover .project__content {
  transform: scale(1);
  opacity: 1;
}

.project__title {
  margin-bottom: 30px;
  color: #fff;
}



.gallery {
  background: rgb(10, 10, 10);
  img {
    display: block;
  }
}

.slider-single {
  margin-bottom: 15px;
  img {
    width: 100%;
  }
} 

.slider-nav img {
  width: 100%;
  height: 100%;
}

.slider-nav .slick-slide {
  margin: 0 10px;
  cursor: pointer;
}

.slick-list.draggable {
  padding: 0 !important;
}

.about-project-section {
  padding: 20px 0 40px;
}

.about-project__title {
  font-size: 3.2rem;
  // margin-bottom: 60px;
  text-align: center;
}

.project-btns {
  display: block;
  text-align: center;
  margin: 60px 0;
}

.technology-title {
  text-align: center;
  font-size: 1.6rem;
}

.technology-list {
  display: flex;
  justify-content: center;
  &__icon {
    width: 50px;
    height: 50px;
    margin: 0 10px;
  }
}

.experience-section {
  padding: 40px 0;
  &__header {
    text-align: center;
    font-size: 1.8rem;
  }
}

.job {
  margin-bottom: 30px;
  &__title {
    font-size: 1.4rem;
    margin-bottom: 10px;
  }
  &__duration {
    color: $primary-color;
    font-weight: 600;
    font-size: 14px;  
  }
}

footer {
  height: 80px;
  background: #203A43;
  display: flex;
  justify-content: center;
  align-items: center;
  .contact-list {
    display: flex;
    &__icon {
      color: #fff;
      display: block;
      padding: 10px;
      margin: 10px;
      font-size: 1.4rem;
      &:hover {
        color: #4D6973
      }
    }
  }
}

@media(min-width: 768px) {
  header nav {
    justify-content: space-between;
  }
  .logo {
    flex-basis: initial !important;
    font-size: 1.1rem;
  }
  .hero__title {
    font-size: 3rem;
  }
  .project-section {
    display: flex;
    flex-wrap: wrap;
    .project {
      flex-basis: 33.33%;
      height: 300px;
    }
  }
  .gallery {
    padding: 10px 0;
  }
  .slider-single img {
    width: initial;
    margin: auto;
  }
}

